[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "integrity_test"
version = "0.1.0"
authors = [
  { name="Sam Chen", email="samchencode@gmail.com" },
]
description = "For performing integrity tests on data tables"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
